<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_title"
        android:id="@+id/text_view_title"
        android:layout_marginTop="@dimen/text_view_layout_marginTop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_app"
        android:id="@+id/first_app_button"
        android:layout_marginTop="@dimen/first_app_button_layout_marginTop"
        style="@style/AppsButtons"
        android:layout_below="@+id/text_view_title"
        android:layout_alignRight="@+id/text_view_title"
        android:layout_alignEnd="@+id/text_view_title"
        android:layout_alignLeft="@+id/text_view_title"
        android:layout_alignStart="@+id/text_view_title"
        android:onClick="buttonOnClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_app"
        android:id="@+id/second_app_button"
        style="@style/AppsButtons"
        android:layout_below="@+id/first_app_button"
        android:layout_alignLeft="@+id/first_app_button"
        android:layout_alignStart="@+id/first_app_button"
        android:layout_marginTop="@dimen/apps_button_layout_marginTop"
        android:layout_alignRight="@+id/first_app_button"
        android:layout_alignEnd="@+id/first_app_button"
        android:onClick="buttonOnClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_app"
        android:id="@+id/third_app_button"
        style="@style/AppsButtons"
        android:layout_below="@+id/second_app_button"
        android:layout_alignLeft="@+id/forth_app_button"
        android:layout_alignStart="@+id/forth_app_button"
        android:layout_marginTop="@dimen/apps_button_layout_marginTop"
        android:layout_alignRight="@+id/second_app_button"
        android:layout_alignEnd="@+id/second_app_button"
        android:onClick="buttonOnClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forth_app"
        android:id="@+id/forth_app_button"
        style="@style/AppsButtons"
        android:layout_below="@+id/third_app_button"
        android:layout_alignLeft="@+id/second_app_button"
        android:layout_alignStart="@+id/second_app_button"
        android:layout_marginTop="@dimen/apps_button_layout_marginTop"
        android:layout_alignRight="@+id/second_app_button"
        android:layout_alignEnd="@+id/second_app_button"
        android:onClick="buttonOnClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifth_app"
        android:id="@+id/fifth_app_button"
        style="@style/AppsButtons"
        android:layout_below="@+id/forth_app_button"
        android:layout_alignLeft="@+id/forth_app_button"
        android:layout_alignStart="@+id/forth_app_button"
        android:layout_marginTop="@dimen/apps_button_layout_marginTop"
        android:layout_alignRight="@+id/forth_app_button"
        android:layout_alignEnd="@+id/forth_app_button"
        android:onClick="buttonOnClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixth_app"
        android:id="@+id/sixth_app_button"
        android:background="#E91E63"
        android:layout_below="@+id/fifth_app_button"
        android:layout_alignLeft="@+id/fifth_app_button"
        android:layout_alignStart="@+id/fifth_app_button"
        android:layout_marginTop="@dimen/apps_button_layout_marginTop"
        android:layout_alignRight="@+id/fifth_app_button"
        android:layout_alignEnd="@+id/fifth_app_button"
        android:onClick="buttonOnClick"
        />

</RelativeLayout>
</ScrollView>